add daily check and check absent api added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 app.security.user.name=ruslan
 app.security.user.password=12345
+
+
+work.work-start-time = 09:00
+work.work-end-time = 18:00
