--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=employee-management-system
-server.port=9090
+server.port=9595
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_system
 spring.datasource.username=root
 spring.datasource.password=12345
@@ -11,7 +11,13 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 app.security.user.name=ruslan
 app.security.user.password=12345
+app.security.admin.name=admin
+app.security.admin.password=admin123
+app.security.hr.name=hr
+app.security.hr.password=hr123
 
 
 work.work-start-time = 09:00
 work.work-end-time = 18:00
+
+logging.level.org.springframework.security=DEBUG
