login metod added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ work.work-start-time = 09:00
 work.work-end-time = 18:00
 
 logging.level.org.springframework.security=DEBUG
+
+login.first-password = firstlogin123
