get EmployeeList By DepartmentId metod added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,18 +8,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
 app.security.user.name=ruslan
 app.security.user.password=12345
 app.security.admin.name=admin
 app.security.admin.password=admin123
 app.security.hr.name=hr
 app.security.hr.password=hr123
-
-
-work.work-start-time = 09:00
-work.work-end-time = 18:00
-
+work.work-start-time=09:00
+work.work-end-time=18:00
 logging.level.org.springframework.security=DEBUG
-
-login.first-password = firstlogin123
+login.first-password=firstlogin123
