send mail and read notification api added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,23 @@ work.work-start-time=09:00
 work.work-end-time=18:00
 logging.level.org.springframework.security=DEBUG
 login.first-password=firstlogin123
+
+
+
+# SMTP server
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+
+# System email account
+spring.mail.username=hr.system@gmail.com
+spring.mail.password=APP_PASSWORD
+
+# SMTP properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Optional
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
